--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "SpectraEventSolutions",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -31,10 +31,12 @@
     "date-fns": "^2.30.0",
     "lucide-react": "^0.287.0",
     "next": "13.5.4",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-day-picker": "^8.9.0",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
