--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_API_BASE_URL='https://spectraevent-solutions.up.railway.app/api/v1'
-# NEXT_PUBLIC_API_BASE_URL='http://localhost:5000/api/v1'
+# NEXT_PUBLIC_API_BASE_URL='https://spectraevent-solutions.up.railway.app/api/v1'
+NEXT_PUBLIC_API_BASE_URL='http://localhost:5000/api/v1'
 NEXT_PUBLIC_IMGBB_KEY='3664763b1795a8c6f3c8e7927151cac7'
