--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "react-slick": "^0.29.0",
+    "react-to-print": "^2.14.15",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
