--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jwt-decode": "^3.1.2",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.7",
     "react": "^18",
     "react-day-picker": "^8.9.0",
     "react-dom": "^18",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.10",
