--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_API_BASE_URL='https://spectraevent-solutions.up.railway.app/api/v1'
+NEXT_BASE_URL='https://spectraevent-solutions.up.railway.app'
 # NEXT_PUBLIC_API_BASE_URL='http://localhost:5000/api/v1'
 NEXT_PUBLIC_IMGBB_KEY='3664763b1795a8c6f3c8e7927151cac7'
 EMAIL='shuvoprogramer@gmail.com'
