--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.5.1",
     "date-fns": "^2.30.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
@@ -36,6 +37,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@ant-design/pro-components": "^2.6.43",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
