--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
     "react": "^18",
+    "react-countup": "^6.5.0",
     "react-day-picker": "^8.9.0",
     "react-dom": "^18",
     "react-hamburger-menus": "^1.0.16",
